objects/Contact_Asset_Link__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Contact_Asset_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_Product2ID__c</fullName>
        <formula>Asset__r.Product2Id</formula>
        <label>Asset_Product2ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipName>Contact_Asset_Links</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Contact_Asset_Links</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Lanyon_Migrated_ID__c</fullName>
        <externalId>true</externalId>
        <label>Lanyon Migrated ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <description>This object has the many to many link between Contacts and Install Base (Asset)  via AccountID.

Contact_Asset_Links</description>
    <label>Contact Install Base</label>
    <nameField>
        <label>Contact Install Base</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Install Base</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>